--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "scratchpad",
   "version": "0.1.0",
+  "homepage": "https://pppster.github.io/gpc",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
